# backup/v0.1/server.pb.go
@@ -21,12 +21,10 @@ var _ = fmt.Errorf
 var _ = math.Inf
 
 type ServerCreateRequest struct {
-	Name        string `protobuf:"bytes,1,opt,name=name" json:"name,omitempty"`
-	Namespace   string `protobuf:"bytes,2,opt,name=namespace" json:"namespace,omitempty"`
-	ClusterName string `protobuf:"bytes,3,opt,name=cluster_name" json:"cluster_name,omitempty"`
-	Credential  string `protobuf:"bytes,4,opt,name=credential" json:"credential,omitempty"`
-	BucketName  string `protobuf:"bytes,5,opt,name=bucket_name" json:"bucket_name,omitempty"`
-	Disk        string `protobuf:"bytes,9,opt,name=disk" json:"disk,omitempty"`
+	ClusterName string `protobuf:"bytes,1,opt,name=cluster_name" json:"cluster_name,omitempty"`
+	Credential  string `protobuf:"bytes,2,opt,name=credential" json:"credential,omitempty"`
+	BucketName  string `protobuf:"bytes,3,opt,name=bucket_name" json:"bucket_name,omitempty"`
+	Disk        string `protobuf:"bytes,4,opt,name=disk" json:"disk,omitempty"`
 }
 
 func (m *ServerCreateRequest) Reset()                    { *m = ServerCreateRequest{} }
@@ -35,9 +33,7 @@ func (*ServerCreateRequest) ProtoMessage()               {}
 func (*ServerCreateRequest) Descriptor() ([]byte, []int) { return fileDescriptor1, []int{0} }
 
 type ServerDeleteRequest struct {
-	Name        string `protobuf:"bytes,1,opt,name=name" json:"name,omitempty"`
-	Namespace   string `protobuf:"bytes,2,opt,name=namespace" json:"namespace,omitempty"`
-	ClusterName string `protobuf:"bytes,3,opt,name=cluster_name" json:"cluster_name,omitempty"`
+	ClusterName string `protobuf:"bytes,5,opt,name=cluster_name" json:"cluster_name,omitempty"`
 }
 
 func (m *ServerDeleteRequest) Reset()                    { *m = ServerDeleteRequest{} }
@@ -157,24 +153,23 @@ var _Server_serviceDesc = grpc.ServiceDesc{
 func init() { proto.RegisterFile("server.proto", fileDescriptor1) }
 
 var fileDescriptor1 = []byte{
-	// 295 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x09, 0x6e, 0x88, 0x02, 0xff, 0xa4, 0x91, 0x3f, 0x4b, 0xc4, 0x40,
-	0x10, 0xc5, 0xc9, 0x79, 0x06, 0x6e, 0x4c, 0xe3, 0xde, 0x21, 0x21, 0x5a, 0x1c, 0x01, 0xe1, 0x38,
-	0x61, 0xe3, 0x9f, 0xce, 0x56, 0x4b, 0xab, 0x13, 0x6c, 0x65, 0xb3, 0x19, 0xce, 0x90, 0xb8, 0xbb,
-	0xee, 0x6e, 0x0e, 0x6c, 0xf5, 0x23, 0xf8, 0xd1, 0xac, 0xec, 0xfd, 0x20, 0x26, 0x3b, 0x58, 0x28,
-	0x8a, 0x85, 0xcd, 0xc2, 0xfe, 0x18, 0xde, 0x9b, 0xf7, 0x06, 0x12, 0x87, 0x76, 0x83, 0x96, 0x1b,
-	0xab, 0xbd, 0x66, 0x71, 0x29, 0x64, 0xd3, 0x99, 0xec, 0x60, 0xad, 0xf5, 0xba, 0xc5, 0x42, 0x98,
-	0xba, 0x10, 0x4a, 0x69, 0x2f, 0x7c, 0xad, 0x95, 0xa3, 0xa9, 0x6c, 0x6f, 0xc0, 0x95, 0x7f, 0x34,
-	0xe8, 0x8a, 0xf0, 0x12, 0xcf, 0x9f, 0x23, 0x98, 0x5e, 0x07, 0xb9, 0x0b, 0x8b, 0xc2, 0xe3, 0x0a,
-	0x1f, 0x3a, 0x74, 0x9e, 0x25, 0x30, 0x56, 0xe2, 0x1e, 0xd3, 0x68, 0x1e, 0x2d, 0x26, 0x6c, 0x17,
-	0x26, 0xc3, 0xcf, 0x19, 0x21, 0x31, 0x1d, 0x05, 0x34, 0x83, 0x44, 0xb6, 0x9d, 0xf3, 0x68, 0x6f,
-	0xc3, 0xe0, 0x56, 0xa0, 0x0c, 0x40, 0x5a, 0xac, 0x50, 0xf9, 0x5a, 0xb4, 0xe9, 0x38, 0xb0, 0x29,
-	0xec, 0x94, 0x9d, 0x6c, 0xd0, 0xd3, 0xe0, 0x76, 0x80, 0xbd, 0x7e, 0x55, 0xbb, 0x26, 0x9d, 0x0c,
-	0xbf, 0xfc, 0xea, 0x73, 0x89, 0x4b, 0x6c, 0xf1, 0xbf, 0x4b, 0x9c, 0xbe, 0x45, 0x10, 0x93, 0x1c,
-	0xbb, 0x83, 0x98, 0x72, 0xb1, 0x7d, 0x4e, 0x3d, 0xf1, 0x1f, 0xd2, 0x66, 0x33, 0x4e, 0xd5, 0xf0,
-	0x1b, 0x5d, 0x57, 0xab, 0xde, 0xa2, 0x2f, 0x0e, 0xf3, 0xa3, 0xa7, 0xd7, 0xf7, 0x97, 0xd1, 0x61,
-	0x36, 0xef, 0x3b, 0x35, 0x4e, 0xea, 0x8a, 0xca, 0x25, 0x9d, 0x62, 0x73, 0xcc, 0x4f, 0x0a, 0xba,
-	0xc4, 0x79, 0xb4, 0x64, 0x08, 0x31, 0x2d, 0xff, 0xdd, 0xe9, 0x4b, 0xa4, 0x5f, 0x9c, 0x16, 0xc1,
-	0x29, 0x5f, 0xfe, 0xe9, 0x54, 0xc6, 0xe1, 0x6c, 0x67, 0x1f, 0x01, 0x00, 0x00, 0xff, 0xff, 0xea,
-	0x8d, 0xd0, 0x28, 0x04, 0x02, 0x00, 0x00,
+	// 276 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x09, 0x6e, 0x88, 0x02, 0xff, 0x84, 0x90, 0xcd, 0x4a, 0x03, 0x31,
+	0x14, 0x85, 0x99, 0x5a, 0x07, 0xbc, 0xce, 0x2a, 0x2d, 0x32, 0x8c, 0x2e, 0xca, 0x80, 0x50, 0x5a,
+	0xc8, 0xf8, 0xb3, 0x73, 0xab, 0x4f, 0x50, 0xc1, 0xad, 0x64, 0x26, 0x97, 0x1a, 0x66, 0x4c, 0x62,
+	0x92, 0x29, 0xb8, 0xf5, 0x15, 0x7c, 0x34, 0x57, 0xee, 0x7d, 0x10, 0x3b, 0xb9, 0xb8, 0x50, 0x2c,
+	0xdd, 0x04, 0x72, 0x38, 0xdc, 0xef, 0x9c, 0x03, 0x99, 0x47, 0xb7, 0x41, 0xc7, 0xad, 0x33, 0xc1,
+	0xb0, 0xb4, 0x16, 0x4d, 0xdb, 0xdb, 0xe2, 0x6c, 0x6d, 0xcc, 0xba, 0xc3, 0x4a, 0x58, 0x55, 0x09,
+	0xad, 0x4d, 0x10, 0x41, 0x19, 0xed, 0xc9, 0x55, 0x9c, 0x0c, 0xb2, 0x0c, 0xaf, 0x16, 0x7d, 0x15,
+	0x5f, 0xd2, 0xcb, 0x1a, 0x26, 0xf7, 0xf1, 0xda, 0xad, 0x43, 0x11, 0x70, 0x85, 0x2f, 0x3d, 0xfa,
+	0xc0, 0xa6, 0x90, 0x35, 0x5d, 0xef, 0x03, 0xba, 0x47, 0x2d, 0x9e, 0x31, 0x4f, 0x66, 0xc9, 0xfc,
+	0x88, 0x31, 0x80, 0xc6, 0xa1, 0x44, 0x1d, 0x94, 0xe8, 0xf2, 0x51, 0xd4, 0x26, 0x70, 0x5c, 0xf7,
+	0x4d, 0x8b, 0x81, 0x8c, 0x07, 0x51, 0xcc, 0x60, 0x2c, 0x95, 0x6f, 0xf3, 0xf1, 0xf0, 0x2b, 0x97,
+	0x3f, 0x8c, 0x3b, 0xec, 0x70, 0x37, 0xe3, 0x70, 0x30, 0x5f, 0x7d, 0x26, 0x90, 0x92, 0x9b, 0x3d,
+	0x41, 0x4a, 0xa9, 0xd8, 0x29, 0xa7, 0x92, 0xfc, 0x9f, 0xac, 0xc5, 0x94, 0x53, 0x2f, 0xfe, 0x60,
+	0x94, 0x5c, 0xa1, 0xb7, 0xdb, 0xd6, 0x58, 0x2e, 0xdf, 0x3e, 0xbe, 0xde, 0x47, 0xe7, 0xc5, 0x6c,
+	0x3b, 0x88, 0xf5, 0x8d, 0x91, 0xb4, 0x0c, 0xdd, 0xa9, 0x36, 0x17, 0xfc, 0xb2, 0xa2, 0x19, 0x6f,
+	0x92, 0x05, 0x43, 0x48, 0x29, 0xdb, 0x5f, 0xd2, 0xaf, 0xc4, 0x3b, 0x48, 0xf3, 0x48, 0x2a, 0x17,
+	0x7b, 0x49, 0x75, 0x1a, 0x37, 0xbf, 0xfe, 0x0e, 0x00, 0x00, 0xff, 0xff, 0x09, 0x9a, 0x1e, 0x59,
+	0xc1, 0x01, 0x00, 0x00,
 }
